[gd_scene load_steps=6 format=3 uid="uid://cgtxb5iesuex6"]

[ext_resource type="Script" uid="uid://cah34g0n0nmxe" path="res://Gacha/obsolete/pull_button.gd" id="1_5awja"]
[ext_resource type="Script" uid="uid://cxg8a8biioxgc" path="res://Gacha/gacha_menu.gd" id="1_ftmkf"]
[ext_resource type="PackedScene" uid="uid://c6pj2nc73reyx" path="res://Gacha/backpack_inventory.tscn" id="2_pju2w"]
[ext_resource type="Script" uid="uid://c06okvbis2lr4" path="res://Gacha/gacha_background.gd" id="2_xtqx2"]
[ext_resource type="Script" uid="uid://bhhur6j7ovoya" path="res://Gacha/start_new_game_button.gd" id="5_iih0j"]

[node name="GachaMenu" type="Control" groups=["gacha_menu", "game_over_screen"]]
z_index = 200
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ftmkf")

[node name="StartNewGameButton" type="Button" parent="."]
z_index = 200
layout_mode = 0
offset_left = 144.0
offset_top = 112.0
offset_right = 152.0
offset_bottom = 120.0
script = ExtResource("5_iih0j")

[node name="GachaBackground" type="ColorRect" parent="."]
visible = false
z_index = -1
layout_mode = 0
offset_right = 240.0
offset_bottom = 135.0
color = Color(0.13333334, 0.14509805, 0.21960784, 1)

[node name="GachaBackground2" type="ColorRect" parent="."]
visible = false
z_index = -1
layout_mode = 0
offset_left = 35.0
offset_top = 9.0
offset_right = 202.0
offset_bottom = 122.0
color = Color(0.21176471, 0.24705882, 0.3764706, 1)

[node name="BackpackInventory" parent="." instance=ExtResource("2_pju2w")]
z_index = 100
custom_minimum_size = Vector2(50, 30)
layout_mode = 0
offset_left = 54.0
offset_top = 13.0
offset_right = 104.0
offset_bottom = 43.0

[node name="PullButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 82.0
offset_top = 89.0
offset_right = 102.0
offset_bottom = 97.0
script = ExtResource("1_5awja")

[node name="GachaOverlay" type="ColorRect" parent="PullButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -82.0
offset_top = -89.0
offset_right = 158.0
offset_bottom = 46.0
color = Color(0, 0, 0, 0.79607844)

[node name="TowerSprite" type="TextureRect" parent="PullButton/GachaOverlay"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 112.0
offset_top = 44.0
offset_right = 122.0
offset_bottom = 54.0

[node name="StatsLabel" type="RichTextLabel" parent="PullButton/GachaOverlay"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 105.0
offset_top = 79.0
offset_right = 190.0
offset_bottom = 135.0

[node name="GameOverBackground" type="ColorRect" parent="."]
visible = false
z_index = 110
layout_mode = 0
offset_right = 240.0
offset_bottom = 135.0
color = Color(0, 0, 0, 1)
script = ExtResource("2_xtqx2")

[node name="GameOverText" type="Label" parent="."]
visible = false
z_index = 120
layout_mode = 0
offset_left = -7.0
offset_top = 30.0
offset_right = 245.0
offset_bottom = 105.0
text = "You have run out of meat.
Your critters have gone on strike.
Game Over."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="Control" parent="."]
z_index = 1
anchors_preset = 0
offset_left = 333.0
offset_top = 16.0
offset_right = 373.0
offset_bottom = 56.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -1000
layout_mode = 0
offset_left = -63.0
offset_top = -41.0
offset_right = 308.0
offset_bottom = 181.0
mouse_filter = 2
color = Color(0.13333334, 0.14509805, 0.21960784, 1)

[node name="ColorRect3" type="ColorRect" parent="Background"]
z_index = -1000
layout_mode = 0
offset_left = 97.0
offset_top = 3.0
offset_right = 139.0
offset_bottom = 122.0
mouse_filter = 2
color = Color(0.105882354, 0.11372549, 0.17254902, 1)

[node name="ColorRect4" type="ColorRect" parent="Background"]
z_index = -1000
layout_mode = 0
offset_left = 95.0
offset_right = 137.0
offset_bottom = 120.0
mouse_filter = 2
color = Color(0.21176471, 0.24705882, 0.3764706, 1)

[node name="ColorRect6" type="ColorRect" parent="Background"]
z_index = -1000
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 44.0
offset_bottom = 122.0
mouse_filter = 2
color = Color(0.105882354, 0.11372549, 0.17254902, 1)

[node name="ColorRect8" type="ColorRect" parent="Background"]
z_index = -1000
layout_mode = 0
offset_right = 84.0
offset_bottom = 120.0
mouse_filter = 2
color = Color(0.21176471, 0.24705882, 0.3764706, 1)
